--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,22 +3,6 @@ on:
   push:
     branches:
       - 'master'
-      - 'main'
-      - 'dev'
-    tags-ignore:
-      - '**'
-    paths-ignore:
-      - 'LICENSE'
-      - '**.md'
-  pull_request:
-  release:
-    types: [created]
-  workflow_dispatch:
-    inputs:
-      test_release:
-        description: 'Test release?'
-        required: true
-        default: 'false'
 
 jobs:
   build:
@@ -26,7 +10,7 @@ jobs:
     runs-on: macos-11
     strategy:
       matrix:
-        arch: [arm64]
+        arch: [arm64, x86_64]
         platform: [macos]
     steps:
       - name: Checkout
@@ -51,7 +35,7 @@ jobs:
         if: steps.cache-sysroot.outputs.cache-hit != 'true'
         run: |
           brew uninstall cmake
-          brew install bison pkg-config nasm make meson glib
+          brew install bison pkg-config nasm make meson
           rm -f /usr/local/lib/pkgconfig/*.pc
           ./scripts/build_dependencies.sh -p ${{ matrix.platform }} -a ${{ matrix.arch }}
       - name: Compress Sysroot
@@ -63,7 +47,3 @@ jobs:
         with:
           name: Sysroot-${{ matrix.platform }}-${{ matrix.arch }}
           path: sysroot.tgz
-      - name: Upload UTM
-        uses: actions/upload-artifact@v2
-        with:
-          name: UTM-${{ matrix.platform }}-${{ matrix.arch }}
