--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -73,6 +73,7 @@ jobs:
           echo "/usr/local/opt/gettext/bin" >> $GITHUB_PATH
           echo "/usr/local/opt/bison/bin" >> $GITHUB_PATH
       - name: Build Sysroot
+        shell: bash
         if: steps.cache-sysroot.outputs.cache-hit != 'true'
         run: |
           sudo apt-get remove -y cmake
