--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: macos-11
     strategy:
       matrix:
-        arch: [arm64, x86_64]
+        arch: [arm64]
         platform: [macos]
     steps:
       - name: Checkout
