--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,8 +35,8 @@ jobs:
         shell: bash
         if: steps.cache-sysroot.outputs.cache-hit != 'true'
         run: |
-          wget https://github.com/macports/macports-base/releases/download/v2.7.1/MacPorts-2.7.1-12-Monterey.pkg
-          sudo installer -pkg ./MacPorts-2.7.1-12-Monterey.pkg -target /
+          wget https://github.com/macports/macports-base/releases/download/v2.7.1/MacPorts-2.7.1-11-BigSur.pkg
+          sudo installer -pkg ./MacPorts-2.7.1-11-BigSur.pkg -target /
           sudo port install cairo-devel
       - name: Build Sysroot
         shell: bash
