--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,6 +37,7 @@ jobs:
         run: |
           wget https://github.com/macports/macports-base/releases/download/v2.7.1/MacPorts-2.7.1-11-BigSur.pkg
           sudo installer -pkg ./MacPorts-2.7.1-11-BigSur.pkg -target / && sudo /opt/local/bin/port install gtk3-devel
+          sudo find / -name "*.pc" 2>/dev/null
           ls -lt /opt/local/
           ls -lt /opt/X11/
           ls -lt /opt/X11/lib/
