--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,11 +36,9 @@ jobs:
         if: steps.cache-sysroot.outputs.cache-hit != 'true'
         run: |
           wget https://github.com/macports/macports-base/releases/download/v2.7.1/MacPorts-2.7.1-11-BigSur.pkg
-          sudo installer -pkg ./MacPorts-2.7.1-11-BigSur.pkg -target / && sudo /opt/local/bin/port install gtk3-devel && sudo find / -name "*.pc" 2>/dev/null
+          sudo installer -pkg ./MacPorts-2.7.1-11-BigSur.pkg -target / && sudo /opt/local/bin/port install gtk3-devel
           ls -lt /opt/local/lib/pkgconfig
-          ls -lt /opt/X11/
-          ls -lt /opt/X11/lib/
-          ls -lt /opt/X11/local/
+          export PKG_CONFIG_PATH="/opt/local/lib/pkgconfig"
       - name: Build Sysroot
         shell: bash
         if: steps.cache-sysroot.outputs.cache-hit != 'true'
