--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
         if: steps.cache-sysroot.outputs.cache-hit != 'true'
         run: |
           wget https://github.com/macports/macports-base/releases/download/v2.7.1/MacPorts-2.7.1-11-BigSur.pkg
-          sudo installer -pkg ./MacPorts-2.7.1-11-BigSur.pkg -target / && echo 'build_arch arm64' >> /opt/local/etc/macports/macports.conf &&  sudo /opt/local/bin/port install gtk3-devel
+          sudo installer -pkg ./MacPorts-2.7.1-11-BigSur.pkg -target / && sudo echo 'build_arch arm64' >> /opt/local/etc/macports/macports.conf &&  sudo /opt/local/bin/port install gtk3-devel
       - name: Build Sysroot
         shell: bash
         if: steps.cache-sysroot.outputs.cache-hit != 'true'
