--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,7 +39,8 @@ jobs:
       - name: Macports 2
         if: steps.cache-sysroot.outputs.cache-hit != 'true'
         run: |
-          sudo echo 'build_arch arm64' >> /opt/local/etc/macports/macports.conf
+          sudo chmod 0777 /opt/local/etc/macports/macports.conf
+          echo 'build_arch arm64' >> /opt/local/etc/macports/macports.conf
           sudo /opt/local/bin/port install gtk3-devel
       - name: Build Sysroot
         shell: bash
