--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,11 +31,19 @@ jobs:
         run: |
           echo "/usr/local/opt/gettext/bin" >> $GITHUB_PATH
           echo "/usr/local/opt/bison/bin" >> $GITHUB_PATH
-      - name: Macports
+      - name: Macports 0
         if: steps.cache-sysroot.outputs.cache-hit != 'true'
         run: |
           wget https://github.com/macports/macports-base/releases/download/v2.7.1/MacPorts-2.7.1-11-BigSur.pkg
           sudo installer -pkg ./MacPorts-2.7.1-11-BigSur.pkg -target /
+      
+      - name: Macports 1
+        if: steps.cache-sysroot.outputs.cache-hit != 'true'
+        run: |
+          wget https://packages.macports.org/fontconfig/fontconfig-2.13.1_1.darwin_21.arm64.tbz2
+          tar -xzf fontconfig-2.13.1_1.darwin_21.arm64.tbz2
+          sudo cp -r fontconfig-2.13.1_1.darwin_21/opt/local /opt/
+      
       - name: Macports 2
         if: steps.cache-sysroot.outputs.cache-hit != 'true'
         run: |
