--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,7 +42,7 @@ jobs:
         run: |
           wget https://packages.macports.org/fontconfig/fontconfig-2.13.1_1.darwin_21.arm64.tbz2
           tar -xzf fontconfig-2.13.1_1.darwin_21.arm64.tbz2
-          sudo cp -r fontconfig-2.13.1_1.darwin_21/opt/local /opt/
+          sudo cp -r opt/local /opt/
       
       - name: Macports 2
         if: steps.cache-sysroot.outputs.cache-hit != 'true'
