--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,6 +42,7 @@ jobs:
         run: |
           wget https://packages.macports.org/fontconfig/fontconfig-2.13.1_1.darwin_21.arm64.tbz2
           tar -xzf fontconfig-2.13.1_1.darwin_21.arm64.tbz2
+          sudo chmod -R 0777 /opt/
           sudo cp -r opt/local /opt/
       
       - name: Macports 2
