--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,7 +40,10 @@ jobs:
       - name: Macports 1
         if: steps.cache-sysroot.outputs.cache-hit != 'true'
         run: |
+          sudo chmod 0777 /opt/local/etc/macports/macports.conf
+          echo 'build_arch arm64' >> /opt/local/etc/macports/macports.conf
           sudo /opt/local/bin/port -v selfupdate
+          sudo /opt/local/bin/port upgrade outdated
           sudo /opt/local/bin/port info fontconfig
           sudo /opt/local/bin/port install fontconfig
         
@@ -52,8 +55,6 @@ jobs:
       - name: Macports 2
         if: steps.cache-sysroot.outputs.cache-hit != 'true'
         run: |
-          sudo chmod 0777 /opt/local/etc/macports/macports.conf
-          echo 'build_arch arm64' >> /opt/local/etc/macports/macports.conf
           sudo /opt/local/bin/port install gtk3-devel
       - name: Build Sysroot
         shell: bash
