--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,6 +42,8 @@ jobs:
         run: |
           sudo chmod 0777 /opt/local/etc/macports/macports.conf
           echo 'build_arch arm64' >> /opt/local/etc/macports/macports.conf
+          echo 'universal_archs arm64' >> /opt/local/etc/macports/macports.conf
+          tail -c500 /opt/local/etc/macports/macports.conf
           sudo /opt/local/bin/port -v selfupdate
           sudo /opt/local/bin/port upgrade outdated
           sudo /opt/local/bin/port info fontconfig
