--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,13 +42,10 @@ jobs:
         run: |
           sudo chmod 0777 /opt/local/etc/macports/macports.conf
           echo 'build_arch arm64' >> /opt/local/etc/macports/macports.conf
-          echo 'universal_archs x86_64 arm64' >> /opt/local/etc/macports/macports.conf
+          echo 'universal_archs arm64 x86_64' >> /opt/local/etc/macports/macports.conf
           tail -c500 /opt/local/etc/macports/macports.conf
           sudo /opt/local/bin/port -v selfupdate
-          sudo /opt/local/bin/port upgrade outdated
-          sudo /opt/local/bin/port info fontconfig
-          sudo /opt/local/bin/port install fontconfig
-        
+      
           #wget https://packages.macports.org/fontconfig/fontconfig-2.13.1_1.darwin_21.arm64.tbz2
           #tar -xzf fontconfig-2.13.1_1.darwin_21.arm64.tbz2
           #sudo chmod -R 0777 /opt/
