--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -115,8 +115,8 @@ jobs:
           tar -xzf gdbm-1.22_0.darwin_20.arm64.tbz2
           wget https://packages.macports.org/readline/readline-8.1.000_0.darwin_20.arm64.tbz2
           tar -xzf readline-8.1.000_0.darwin_20.arm64.tbz2
-          wget https://packages.macports.org/pkgconfig/pkgconfig-0.29.2_0.darwin_20.arm64.tbz2
-          tar -xzf pkgconfig-0.29.2_0.darwin_20.arm64.tbz2
+          wget https://packages.macports.org/pkgconfig/pkgconfig-0.29.2_0.darwin_20.x86_64.tbz2
+          tar -xzf pkgconfig-0.29.2_0.darwin_20.x86_64.tbz2
           wget https://packages.macports.org/libpixman/libpixman-0.38.4_0.darwin_20.arm64.tbz2
           tar -xzf libpixman-0.38.4_0.darwin_20.arm64.tbz2
           wget https://packages.macports.org/xorg-libXext/xorg-libXext-1.3.4_0.darwin_20.arm64.tbz2
@@ -216,6 +216,7 @@ jobs:
           wget https://packages.macports.org/gtk3-devel/gtk3-devel-3.24.30_1+x11.darwin_20.arm64.tbz2
           tar -xzf gtk3-devel-3.24.30_1+x11.darwin_20.arm64.tbz2
           sudo cp -R -H opt/local/* /opt/local/
+          ls -l
           /opt/local/bin/pkg-config --list-all
       - name: Build Sysroot
         shell: bash
