--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,6 +50,16 @@ jobs:
           #  echo 'universal_archs arm64 x86_64' >> /opt/local/etc/macports/macports.conf
           # tail -c500 /opt/local/etc/macports/macports.conf
           # sudo /opt/local/bin/port -v selfupdate
+          wget https://packages.macports.org/libusb/libusb-1.0.24_0.darwin_20.arm64.tbz2
+          tar libusb-1.0.24_0.darwin_20.arm64.tbz2
+          wget https://packages.macports.org/libffi/libffi-3.4.2_2+universal.darwin_20.arm64-x86_64.tbz2
+          tar libffi-3.4.2_2+universal.darwin_20.arm64-x86_64.tbz2
+          wget https://packages.macports.org/libgpg-error/libgpg-error-1.43_1.darwin_20.arm64.tbz2
+          tar libgpg-error-1.43_1.darwin_20.arm64.tbz2
+          wget https://packages.macports.org/libgcrypt/libgcrypt-1.9.4_0.darwin_20.arm64.tbz2
+          tar libgcrypt-1.9.4_0.darwin_20.arm64.tbz2
+          wget https://packages.macports.org/libopus/libopus-1.3.1_0.darwin_20.arm64.tbz2
+          tar -xzf libopus-1.3.1_0.darwin_20.arm64.tbz2
           wget https://packages.macports.org/at-spi2-atk/at-spi2-atk-2.38.0_0.darwin_20.arm64.tbz2
           tar -xzf at-spi2-atk-2.38.0_0.darwin_20.arm64.tbz2
           wget https://packages.macports.org/at-spi2-core/at-spi2-core-2.38.0_0.darwin_20.arm64.tbz2
