--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -51,13 +51,13 @@ jobs:
           # tail -c500 /opt/local/etc/macports/macports.conf
           # sudo /opt/local/bin/port -v selfupdate
           wget https://packages.macports.org/libusb/libusb-1.0.24_0.darwin_20.arm64.tbz2
-          tar libusb-1.0.24_0.darwin_20.arm64.tbz2
+          tar -xzf libusb-1.0.24_0.darwin_20.arm64.tbz2
           wget https://packages.macports.org/libffi/libffi-3.4.2_2+universal.darwin_20.arm64-x86_64.tbz2
-          tar libffi-3.4.2_2+universal.darwin_20.arm64-x86_64.tbz2
+          tar -xzf libffi-3.4.2_2+universal.darwin_20.arm64-x86_64.tbz2
           wget https://packages.macports.org/libgpg-error/libgpg-error-1.43_1.darwin_20.arm64.tbz2
-          tar libgpg-error-1.43_1.darwin_20.arm64.tbz2
+          tar -xzf libgpg-error-1.43_1.darwin_20.arm64.tbz2
           wget https://packages.macports.org/libgcrypt/libgcrypt-1.9.4_0.darwin_20.arm64.tbz2
-          tar libgcrypt-1.9.4_0.darwin_20.arm64.tbz2
+          tar -xzf libgcrypt-1.9.4_0.darwin_20.arm64.tbz2
           wget https://packages.macports.org/libopus/libopus-1.3.1_0.darwin_20.arm64.tbz2
           tar -xzf libopus-1.3.1_0.darwin_20.arm64.tbz2
           wget https://packages.macports.org/at-spi2-atk/at-spi2-atk-2.38.0_0.darwin_20.arm64.tbz2
