--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -88,6 +88,11 @@ jobs:
           echo 'Cflags: -I${includedir}/iconv' >> opt/local/lib/pkgconfig/iconv.pc
           echo 'Libs: -L${libdir} -liconv' >> opt/local/lib/pkgconfig/iconv.pc
 
+          cat opt/local/lib/pkgconfig/iconv.pc
+          cat opt/local/lib/pkgconfig/glib-2.0.pc
+          cat opt/local/lib/pkgconfig/expat.pc
+          
+
           wget https://packages.macports.org/gettext-tools-libs/gettext-tools-libs-0.21_0.darwin_20.arm64.tbz2
           tar -xzf gettext-tools-libs-0.21_0.darwin_20.arm64.tbz2
           wget https://packages.macports.org/libtextstyle/libtextstyle-0.21_0.darwin_20.arm64.tbz2
