--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -248,7 +248,7 @@ jobs:
           sudo chmod -R 0777 /opt/
           sudo chown -R runner /opt/
 
-          ls -l /opt/local/include/iconv
+          ls -l /opt/local/include/ | grep iconv
           
           pkg-config --modversion iconv
           pkg-config --libs iconv
