--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -249,18 +249,25 @@ jobs:
           sudo chown -R runner /opt/
 
           ls -l /opt/local/include/ | grep iconv
+
+          echo '/usr/local/bin/pkg-config --atleast-pkgconfig-version 0.9.0'
+          /usr/local/bin/pkg-config --atleast-pkgconfig-version 0.9.0
+
           sudo rm -rf /usr/local/bin/pkg-config
           export PATH="/opt/local/bin:$PATH" 
 
           echo '::::::::::::::::::::::pkg-config'
           which pkg-config
-          pkg-config --list-all
+          echo 'pkg-config --modversion iconv'
           pkg-config --modversion iconv
+          echo 'pkg-config --libs iconv'
           pkg-config --libs iconv
+          echo 'pkg-config --exists iconv'
           pkg-config --exists iconv
+          echo 'pkg-config --exists --print-errors iconv'
           pkg-config --exists --print-errors iconv
 
-
+          echo '::::::::::::::::::::::::::::::::::::::'
           cat opt/local/lib/pkgconfig/iconv.pc
           cat opt/local/lib/pkgconfig/glib-2.0.pc
           cat opt/local/lib/pkgconfig/expat.pc
