--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -256,7 +256,7 @@ jobs:
           echo '/usr/local/bin/pkg-config --atleast-pkgconfig-version 0.9.0'
           /usr/local/bin/pkg-config --atleast-pkgconfig-version 0.9.0
 
-          sudo rm -rf /usr/local/bin/pkg-config
+          # sudo rm -rf /usr/local/bin/pkg-config
           export PATH="/opt/local/bin:$PATH" 
 
           echo '::::::::::::::::::::::pkg-config'
