--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -241,6 +241,7 @@ jobs:
           wget https://packages.macports.org/gtk3-devel/gtk3-devel-3.24.30_1+x11.darwin_20.arm64.tbz2
           tar -xzf gtk3-devel-3.24.30_1+x11.darwin_20.arm64.tbz2
           sudo cp -R -H opt/local/* /opt/local/
+          sudo cp -R -H opt/local/* /usr/local/
           ls -l
           ls -l Applications
           ls -l Library
@@ -274,6 +275,8 @@ jobs:
           cat opt/local/lib/pkgconfig/iconv.pc
           cat opt/local/lib/pkgconfig/glib-2.0.pc
           cat opt/local/lib/pkgconfig/expat.pc
+
+          cp -H
 
       - name: Build Sysroot
         shell: bash
