--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -255,9 +255,9 @@ jobs:
           /usr/local/bin/pkg-config --version
           /opt/local/bin/pkg-config --version
           echo '/usr/local/bin/pkg-config --atleast-pkgconfig-version 0.9.0'
-          /usr/local/bin/pkg-config --atleast-pkgconfig-version 0.9.0
+          #/usr/local/bin/pkg-config --atleast-pkgconfig-version 0.9.0
 
-          # sudo rm -rf /usr/local/bin/pkg-config
+          sudo rm -rf /usr/local/bin/pkg-config
           export PATH="/opt/local/bin:$PATH" 
 
           echo '::::::::::::::::::::::pkg-config'
