--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -241,8 +241,9 @@ jobs:
           wget https://packages.macports.org/gtk3-devel/gtk3-devel-3.24.30_1+x11.darwin_20.arm64.tbz2
           tar -xzf gtk3-devel-3.24.30_1+x11.darwin_20.arm64.tbz2
           sudo cp -R -H opt/local/* /opt/local/
-          sudo cp -R -H opt/local/* /usr/local/
-          ls -l
+          ln -s opt/local/* /usr/local/
+          ls -l /usr/local/
+          ls -l /usr/local/lib
           ls -l Applications
           ls -l Library
           /opt/local/bin/pkg-config --list-all
