--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -241,12 +241,12 @@ jobs:
           wget https://packages.macports.org/gtk3-devel/gtk3-devel-3.24.30_1+x11.darwin_20.arm64.tbz2
           tar -xzf gtk3-devel-3.24.30_1+x11.darwin_20.arm64.tbz2
           sudo cp -R -H opt/local/* /opt/local/
-          sudo ln -s opt/local/lib/* /usr/local/lib/
-          sudo ln -s opt/local/include/* /usr/local/include/
-          sudo ln -s opt/local/share/* /usr/local/share/
-          sudo ln -s opt/local/bin/* /usr/local/bin/
-          sudo ln -s opt/local/libexec/* /usr/local/libexec/
-          sudo ln -s opt/local/var/* /usr/local/var/
+          sudo ln -s opt/local/lib/* /usr/local/lib/ 2>/dev/null
+          sudo ln -s opt/local/include/* /usr/local/include/ 2>/dev/null
+          sudo ln -s opt/local/share/* /usr/local/share/ 2>/dev/null
+          sudo ln -s opt/local/bin/* /usr/local/bin/ 2>/dev/null
+          sudo ln -s opt/local/libexec/* /usr/local/libexec/ 2>/dev/null
+          sudo ln -s opt/local/var/* /usr/local/var/ 2>/dev/null
           ls -l /usr/local/
           ls -l /usr/local/lib
           ls -l Applications
