--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -246,10 +246,11 @@ jobs:
         run: |
           sudo cp -R -H opt/local/* /opt/local/
           sudo ln -s opt/local/lib/* /usr/local/lib/ 2>/dev/null
-          sudo ln -s opt/local/include/* /usr/local/include/ 2>/dev/null
-          sudo ln -s opt/local/share/* /usr/local/share/ 2>/dev/null
-          sudo ln -s opt/local/libexec/* /usr/local/libexec/ 2>/dev/null
-          sudo ln -s opt/local/var/* /usr/local/var/ 2>/dev/null
+          #sudo ln -s opt/local/include/* /usr/local/include/ 2>/dev/null
+          #sudo ln -s opt/local/share/* /usr/local/share/ 2>/dev/null
+          #sudo ln -s opt/local/libexec/* /usr/local/libexec/ 2>/dev/null
+          #sudo ln -s opt/local/var/* /usr/local/var/ 2>/dev/null
+          echo ':::::::::::::::::::::'
           ls -l /usr/local/
           ls -l /usr/local/lib
           ls -l Applications
