--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -247,11 +247,12 @@ jobs:
           sudo cp -R -H opt/local/* /opt/local/
           ls -l opt/local/lib/
           echo '###################'
-          sudo ln -s opt/local/lib/libiconv* /usr/local/lib/
-          sudo ln -s opt/local/include/libiconv* /usr/local/include/ 2>/dev/null
-          sudo ln -s opt/local/share/libiconv* /usr/local/share/ 2>/dev/null
-          sudo ln -s opt/local/libexec/libiconv* /usr/local/libexec/ 2>/dev/null
-          sudo ln -s opt/local/var/libiconv* /usr/local/var/ 2>/dev/null
+          sudo ln -s opt/local/lib/libiconv.2.dylib /usr/local/lib/libiconv.2.dylib
+          sudo ln -s opt/local/lib/libiconv.a /usr/local/lib/libiconv.a
+          #sudo ln -s opt/local/include/libiconv* /usr/local/include/ 2>/dev/null
+          #sudo ln -s opt/local/share/libiconv* /usr/local/share/ 2>/dev/null
+          #sudo ln -s opt/local/libexec/libiconv* /usr/local/libexec/ 2>/dev/null
+          #sudo ln -s opt/local/var/libiconv* /usr/local/var/ 2>/dev/null
           echo ':::::::::::::::::::::'
           ls -l /usr/local/lib
           echo ':::::::::::::::::::::'
