--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -204,8 +204,8 @@ jobs:
           tar -xzf lz4-1.9.3_1.darwin_20.arm64.tbz2
           wget https://packages.macports.org/hicolor-icon-theme/hicolor-icon-theme-0.17_0.darwin_20.noarch.tbz2
           tar -xzf hicolor-icon-theme-0.17_0.darwin_20.noarch.tbz2
-          wget https://packages.macports.org/libepoxy/libepoxy-1.5.4_2+python39.darwin_20.arm64.tbz2
-          tar -xzf libepoxy-1.5.4_2+python39.darwin_20.arm64.tbz2
+          #wget https://packages.macports.org/libepoxy/libepoxy-1.5.4_2+python39.darwin_20.arm64.tbz2
+          #tar -xzf libepoxy-1.5.4_2+python39.darwin_20.arm64.tbz2
           wget https://packages.macports.org/mesa/mesa-19.0.8_1+osmesa+python27.darwin_20.arm64.tbz2
           tar -xzf mesa-19.0.8_1+osmesa+python27.darwin_20.arm64.tbz2
           wget https://packages.macports.org/xorg-libXdamage/xorg-libXdamage-1.1.5_0.darwin_20.arm64.tbz2
