--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,11 +19,6 @@ jobs:
         with:
           submodules: recursive
 
-      - name: before
-        run: |
-          ls -lt /usr/local/lib
-          sudo du -sh /usr/local 
-
       - name: Macports 0
         run: |
            wget https://github.com/macports/macports-base/releases/download/v2.7.1/MacPorts-2.7.1-11-BigSur.pkg
@@ -33,15 +28,7 @@ jobs:
         run: |
           export PATH="/opt/local/bin:$PATH" 
 
-          sudo port install glib2-devel gtk3 gtk-vnc meson pkgconfig spice-gtk
-          wget https://github.com/qemu/qemu/archive/refs/tags/v6.2.0.tar.gz
-          tar -xzf qemu-6.2.0.tar.gz
-          cd qemu-6.2.0
-          export PKG_CONFIG_PATH="/opt/local/lib/pkgconfig:/opt/local/share/pkgconfig:/usr/local/lib/pkgconfig:/usr/local/share/pkgconfig"
-          meson build 
-          cd build
-          meson install
-
+          sudo port install qemu
 
   build-qemu-macos:
     if: false
