--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,8 +1,9 @@
-name: Build
+name: Publish
+
 on:
   push:
-    branches:
-      - 'master'
+    tags:
+      - "v*.*.*"
 
 jobs:
 
@@ -47,6 +48,13 @@ jobs:
           name: qemu-6.2-${{ matrix.platform }}-${{ matrix.arch }}
           path: qemu-6.2-${{ matrix.platform }}-${{ matrix.arch }}.tgz
 
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            qemu-6.2-${{ matrix.platform }}-${{ matrix.arch }}.tgz
+          prerelease: true
 
   build-qemu-macos:
     if: false
