--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,6 +14,7 @@ jobs:
       matrix:
         arch: [amd64]
         platform: [macos]
+        variants: ['+cocoa', '+gtk3 +sdl2']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -29,7 +30,7 @@ jobs:
         run: |
           export PATH="/opt/local/bin:$PATH" 
 
-          sudo port install qemu
+          sudo port install qemu +curses +usb +curl +vnc +vde +lzo +lzfse +snappy +zstd +ssh {{ matrix.platform }}
           mkdir bin
           cp /opt/local/bin/qemu-system-x86_64 bin/
           cp /opt/local/bin/qemu-system-aarch64 bin/
