--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ jobs:
         run: |
           export PATH="/opt/local/bin:$PATH" 
 
-          sudo port install qemu +curses +usb +curl +vnc +vde +lzo +lzfse +snappy +zstd +ssh {{ matrix.platform }}
+          sudo port install qemu +curses +usb +curl +vnc +vde +lzo +lzfse +snappy +zstd +ssh {{ matrix.variants }}
           mkdir bin
           cp /opt/local/bin/qemu-system-x86_64 bin/
           cp /opt/local/bin/qemu-system-aarch64 bin/
@@ -41,20 +41,20 @@ jobs:
       
       - name: Compress
         run: |
-          tar -czvf qemu-6.2-${{ matrix.platform }}-${{ matrix.arch }}.tgz libs bin
+          tar -czvf qemu-6.2-${{ matrix.platform }}-${{ matrix.arch }}{{ matrix.variants }}.tgz libs bin
       
       - name: Upload
         uses: actions/upload-artifact@v2
         with:
-          name: qemu-6.2-${{ matrix.platform }}-${{ matrix.arch }}
-          path: qemu-6.2-${{ matrix.platform }}-${{ matrix.arch }}.tgz
+          name: qemu-6.2-${{ matrix.platform }}-${{ matrix.arch }}{{ matrix.variants }}
+          path: qemu-6.2-${{ matrix.platform }}-${{ matrix.arch }}{{ matrix.variants }}.tgz
 
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            qemu-6.2-${{ matrix.platform }}-${{ matrix.arch }}.tgz
+            qemu-6.2-${{ matrix.platform }}-${{ matrix.arch }}{{ matrix.variants }}.tgz
           prerelease: true
 
   build-qemu-macos:
