--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -54,7 +54,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            qemu-6.2-${{ matrix.platform }}-${{ matrix.arch }}{{ matrix.variants }}.tgz
+            qemu-6.2-${{ matrix.platform }}-${{ matrix.arch }}${{ matrix.variants }}.tgz
           prerelease: true
 
   build-qemu-macos:
