--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,10 +29,13 @@ jobs:
           curl -OL https://raw.githubusercontent.com/kymano-app/remote-viewer/master/fix_linux.sh && \
           bash fix_linux.sh ${{ matrix.arch }} && \
           mkdir bin && \
+          mkdir share && \
           cp /usr/bin/qemu-img bin/ && \
           cp /usr/bin/qemu-system-x86_64 bin/ && \
           cp /usr/bin/qemu-system-aarch64 bin/ && \
-          cp -r /usr/share . && \
+          cp -r /usr/share/ipxe share/ && \
+          cp -r /usr/share/ipxe.efi share/ && \
+          cp -r /usr/share/qemu share/ && \
           tar -czvf qemu-${{ matrix.platform }}-${{ matrix.arch }}.tgz libs bin share"
 
           sudo docker cp qemu:/root/qemu-${{ matrix.platform }}-${{ matrix.arch }}.tgz .
