--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,11 +29,12 @@ jobs:
           curl -OL https://raw.githubusercontent.com/kymano-app/remote-viewer/master/fix_linux.sh && \
           bash fix_linux.sh ${{ matrix.arch }} && \
           mkdir bin && \
-          mkdir share && \
           cp /usr/bin/qemu-img bin/ && \
           cp /usr/bin/qemu-system-x86_64 bin/ && \
           cp /usr/bin/qemu-system-aarch64 bin/ && \
-          p=/usr/share; for file in `find $p/ipxe $p/seabios $p/seavgabios $p/sgabios $p/qemu`; do true | cp -L $file share/; done
+          mkdir share && \
+          p=/usr/share; for file in `find $p/ipxe $p/seabios $p/seavgabios $p/sgabios $p/qemu`; do true | echo $file; done && \
+          p=/usr/share; for file in `find $p/ipxe $p/seabios $p/seavgabios $p/sgabios $p/qemu`; do true | cp -L $file share/; done && \
           tar -czvf qemu-${{ matrix.platform }}-${{ matrix.arch }}.tgz libs bin share"
 
           sudo docker cp qemu:/root/qemu-${{ matrix.platform }}-${{ matrix.arch }}.tgz .
