--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,10 +33,8 @@ jobs:
           cp /usr/bin/qemu-system-x86_64 bin/ && \
           cp /usr/bin/qemu-system-aarch64 bin/ && \
           mkdir share && \
-          ls -l /usr/share/ipxe && \
-          find /usr/share/ipxe && \
-          p=/usr/share; for file in `find $p/ipxe $p/seabios $p/seavgabios $p/sgabios $p/qemu`; do true | echo $file; done && \
-          p=/usr/share; for file in `find $p/ipxe $p/seabios $p/seavgabios $p/sgabios $p/qemu`; do true | cp -L $file share/; done && \
+          p=/usr/share; for file in \`find $p/ipxe $p/seabios $p/seavgabios $p/sgabios $p/qemu\`; do true | echo $file; done && \
+          p=/usr/share; for file in \`find $p/ipxe $p/seabios $p/seavgabios $p/sgabios $p/qemu\`; do true | cp -L $file share/; done && \
           tar -czvf qemu-${{ matrix.platform }}-${{ matrix.arch }}.tgz libs bin share"
 
           sudo docker cp qemu:/root/qemu-${{ matrix.platform }}-${{ matrix.arch }}.tgz .
