--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,7 +33,7 @@ jobs:
           cp /usr/bin/qemu-system-x86_64 bin/ && \
           cp /usr/bin/qemu-system-aarch64 bin/ && \
           mkdir share && \
-          for file in \`find /usr/share/ipxe $p/seabios /usr/share/seavgabios /usr/share/sgabios /usr/share/qemu\`; do true | cp -L $file share/; done && \
+          for file in \`find /usr/share/ipxe /usr/share/seabios /usr/share/seavgabios /usr/share/sgabios /usr/share/qemu\`; do true | cp -L $file share/; done && \
           tar -czvf qemu-${{ matrix.platform }}-${{ matrix.arch }}.tgz libs bin share"
 
           sudo docker cp qemu:/root/qemu-${{ matrix.platform }}-${{ matrix.arch }}.tgz .
