--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,7 @@ name: Publish
 on:
   push:
     tags:
-      - "v*.*.*"
+      - "*.*.*"
 
 jobs:
   build-linux-dnf:
@@ -12,14 +12,14 @@ jobs:
       matrix:
         arch: [amd64, arm64]
         platform: [linux]
-        versions:
-          - fedora: 36
-            qemu: 6.2.0
-          - fedora: 35
-            qemu: 6.1.0
-          - fedora: 34
-            qemu: 5.2.0
     steps:
+      - name: Branch name
+        id: branch_name
+        run: |
+          echo ::set-output name=SOURCE_NAME::${GITHUB_REF#refs/*/}
+          echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
+          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
+
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -30,8 +30,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          docker run --entrypoint /bin/sh --name qemu --platform linux/${{ matrix.arch }} fedora:${{ matrix.versions.fedora }} -c "dnf update -y && \
-          dnf install -y findutils patchelf qemu-${{ matrix.versions.qemu }} && \
+          docker run --entrypoint /bin/sh --name qemu --platform linux/${{ matrix.arch }} fedora:36 -c "dnf update -y && \
+          dnf install -y findutils patchelf qemu-${{ steps.branch_name.outputs.SOURCE_TAG }} && \
           cd /root/ && \
           curl -OL https://raw.githubusercontent.com/kymano-app/remote-viewer/master/fix_linux.sh && \
           bash fix_linux.sh ${{ matrix.arch }} && \
@@ -41,13 +41,12 @@ jobs:
           cp /usr/bin/qemu-system-aarch64 bin/ && \
           mkdir share && \
           p=/usr/share && find \$p/ipxe/ \$p/seabios \$p/seavgabios \$p/sgabios \$p/qemu | while read f ; do true | cp -L \$f share/; done && \
-          tar -czvf qemu-${{ matrix.versions.qemu }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz libs bin share"
+          tar -czvf qemu-${{ steps.branch_name.outputs.SOURCE_TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz libs bin share"
 
-          sudo docker cp qemu:/root/qemu-${{ matrix.versions.qemu }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz .
+          sudo docker cp qemu:/root/qemu-${{ steps.branch_name.outputs.SOURCE_TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz .
 
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             *.tgz
